Directly invoke the AAI
- correct all AAI urls
- use v29 api version for all AAI endpoints
- make aai api version configurable via uui-server.client.aai.apiVersion

Issue-ID: USECASEUI-881
Change-Id: I95be774b4d272d5dd833b3752bef227ab65f1e67
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>